# electronics

./: .gitignore
BLUETOOTH_CHECK/: CMakeLists.txt  sdkconfig
BLUETOOTH_SOURCE/: CMakeLists.txt  sdkconfig.old
BLUETOOTH_SOURCE/main/: main.c
KiCAD/project1/project1/: project1.kicad_prl  project1.kicad_pro  project1.kicad_sch  project1.wbk
KiCAD/project2/project2/: #auto_saved_files#  project2.kicad_prl  project2.kicad_pro  project2.kicad_sch  project2.wbk  ~project2.kicad_sch.lck
Proteus/: ProteusInvestigationPlan.txt
Proteus/7SEG_CLOCK/: E40281-LI.pdf.crdownload  New Project.pdsprj  New Project.pdsprj.DESKTOP-HB4J572.Venia.workspace  sketch_may18a.ino.hex
Proteus/7SEG_CLOCK/Project Backups/: New Project [20250511, 17-41-10].pdsprj  New Project [20250511, 17-41-35].pdsprj  New Project [20250511, 18-31-31].pdsprj  New Project [20250518, 18-28-50].pdsprj  (+32 more)
Proteus/7SEG_CLOCK_UNL2803/: CLOCK_UNL2803.pdsprj  CLOCK_UNL2803.pdsprj.DESKTOP-HB4J572.Venia.workspace  New Project.pdsprj.DESKTOP-HB4J572.Venia.workspace  readme.txt  sketch_may18a.ino.hex
Proteus/LightProject/: LM358.7z  New Project.pdsprj  New Project.pdsprj.DESKTOP-HB4J572.Venia.workspace
Proteus/Project1/: New Project.pdsprj  New Project.pdsprj.DESKTOP-HB4J572.Venia.workspace
Proteus/Project2/: New Project.pdsprj  New Project.pdsprj.DESKTOP-HB4J572.Venia.workspace
WIFI_BASS_BLUETOOTH/: CMakeLists.txt  sdkconfig
WIFI_BASS_BLUETOOTH/main/: CMakeLists.txt  main.c
WIFI_CHECK/WIFI_CHECK/: CMakeLists.txt  sdkconfig  sdkconfig.old
plotter/sketch_nov30a/: sketch_nov30a.ino
(+56 files in other folders)
